@@ -11,6 +11,7 @@ Tom Callaway <tcallawa@redhat.com>
 Pablo del Campo <pablogdc@gmail.com>
 James Le Cuirot <chewi@gentoo.org>
 Tiago Sturmer Daitx <tdaitx@linux.vnet.ibm.com>
+Andrew Dinn <adinn@redhat.com>
 Thomas Fitzsimmons <fitzsim@redhat.com>
 Matthew Flaschen <matthew.flaschen@gatech.edu>
 Michael Franz <mvfranz@gmail.com>
